--- a/demo/SparkDemo/src/main/resources/log4j.properties
+++ b/demo/SparkDemo/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-1###set root ###
+###set root ###
 log4j.rootLogger =DEBUG,console,A,B
 log4j.addivitivity.org.apache=true
 
@@ -13,7 +13,7 @@ log4j.appender.console.layout.ConversionPattern=[%-5p] %d(%r) ==> [%t] %l: %m %x
 
 ### set log.A.level ###
 log4j.appender.A=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.A.File=./logs/demo-Error.log
+log4j.appender.A.File=./logs/sparkdemo/demo-Error.log
 log4j.appender.A.ImmediateFlush=true
 log4j.appender.A.Append =false
 log4j.appender.A.Threshold=ERROR
@@ -23,7 +23,7 @@ log4j.appender.A.layout.ConversionPattern=[%-5p] %d(%r) ==> [%t] %l: %m %x %n
 
 ### set log.B.level ###
 log4j.appender.B=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.B.File= ./logs/demo-debug.log
+log4j.appender.B.File= ./logs/sparkdemo/demo-debug.log
 log4j.appender.B.Append=false
 log4j.appender.B.Threshold=DEBUG
 log4j.appender.B.layout=org.apache.log4j.PatternLayout
