--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,27 @@
-language: scala
-dist: precise
 sudo: false
-script: sbt update compile assembly
 
+cache:
+  directories:
+    - $HOME/.m2/repository
+    - $HOME/.sbt
+    - $HOME/.ivy2
+
+language: scala
+
+script: 
+  - sbt ++$TRAVIS_SCALA_VERSION compile test:compile
+  - sbt ++$TRAVIS_SCALA_VERSION -Dakka.test.timefactor=1.5 'set concurrentRestrictions in Global += Tags.limit(Tags.Test, 1)' test
+
+  # Trick to avoid unnecessary cache updates
+  - find $HOME/.sbt -name "*.lock" | xargs rm
+
+scala:
+  - 2.11.8
+
+jdk:
+  - oraclejdk7
+  - openjdk7
+
+notifications:
+  email:
+    - h417652303@gmail.com
