--- a/demo/SparkDemo/src/main/resources/log4j.properties
+++ b/demo/SparkDemo/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=info,console,A,B
 log4j.addivitivity.org.apache=true
 ### set log.Console.level ###
 log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Threshold=error
+log4j.appender.console.Threshold=info
 log4j.appender.console.ImmediateFlush=true
 log4j.appender.console.Target=System.out
 #log4j.appender.console.layout=org.apache.log4j.SimpleLayout
