--- a/demo/SparkDemo/src/main/resources/log4j.properties
+++ b/demo/SparkDemo/src/main/resources/log4j.properties
@@ -1,9 +1,9 @@
 ###set root ###
-log4j.rootLogger=info,console,A,B
+log4j.rootLogger=warn,console,A,B
 log4j.addivitivity.org.apache=true
 ### set log.Console.level ###
 log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Threshold=info
+log4j.appender.console.Threshold=warn
 log4j.appender.console.ImmediateFlush=true
 log4j.appender.console.Target=System.out
 #log4j.appender.console.layout=org.apache.log4j.SimpleLayout
