--- a/demo/SparkDemo/src/main/resources/log4j.properties
+++ b/demo/SparkDemo/src/main/resources/log4j.properties
@@ -1,9 +1,9 @@
 ###set root ###
-log4j.rootLogger=warn,console,A,B
+log4j.rootLogger=info,console,A,B
 log4j.addivitivity.org.apache=true
 ### set log.Console.level ###
 log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Threshold=warn
+log4j.appender.console.Threshold=info
 log4j.appender.console.ImmediateFlush=true
 log4j.appender.console.Target=System.out
 #log4j.appender.console.layout=org.apache.log4j.SimpleLayout
@@ -12,6 +12,7 @@ log4j.appender.console.layout.ConversionPattern=[%-5p] %d(%r) ==> [%t] %l: %m %x
 ### set log.A.level ###
 log4j.appender.A=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.A.File=./logs/sparkdemo/demo-Error.log
+log4j.appender.A.DatePattern='.'yyyy-MM-dd
 log4j.appender.A.ImmediateFlush=true
 log4j.appender.A.Append=false
 log4j.appender.A.Threshold=ERROR
@@ -20,6 +21,7 @@ log4j.appender.A.layout.ConversionPattern=[%-5p] %d(%r) ==> [%t] %l: %m %x %n
 ### set log.B.level ###
 log4j.appender.B=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.B.File=./logs/sparkdemo/demo-debug.log
+log4j.appender.B.DatePattern='.'yyyy-MM-dd
 log4j.appender.B.Append=false
 log4j.appender.B.Threshold=DEBUG
 log4j.appender.B.layout=org.apache.log4j.PatternLayout
