--- a/demo/ScalaDemo/src/main/resources/test.conf
+++ b/demo/ScalaDemo/src/main/resources/test.conf
@@ -4,3 +4,39 @@ test_2 = [
   "server= 192.168.1.1",
   "port = 22"
 ]
+
+
+test3 {
+  timeOffset = [
+    "t300=0",
+    "t301=0",
+    "t304=0",
+    "t003=0",
+    "t004=0",
+    "t010=0",
+    "t315=0",
+    "t219=0",
+    "t299=0",
+    "t254=0",
+    "t134=0",
+    "t253=0",
+    "t316=0",
+    "t135=0",
+    "t204_tmp=0",
+    "t205=0",
+    "t206=0",
+    "t232=0",
+    "t233=0",
+    "t234=0",
+    "t200=0",
+    "t201=0",
+    "t209=0",
+    "t210=0",
+    "t207=0",
+    "t211=0",
+    "t212=0",
+    "t217=0",
+    "t218=0",
+    "t239=0"
+  ]
+}
