--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: false
 
+install: travis_wait 30 mvn install
+
 cache:
   directories:
     - $HOME/.m2/repository
@@ -12,7 +14,7 @@ script:
   - sbt ++$TRAVIS_SCALA_VERSION compile test:compile
   - sbt ++$TRAVIS_SCALA_VERSION -Dakka.test.timefactor=1.5 'set concurrentRestrictions in Global += Tags.limit(Tags.Test, 1)' test
   - sbt ++$TRAVIS_SCALA_VERSION assembly
-  - travis_wait 30 sbt ++$TRAVIS_SCALA_VERSION coverage test coverageReport
+  - sbt ++$TRAVIS_SCALA_VERSION coverage test coverageReport
   - find $HOME/.sbt -name "*.lock" | xargs rm
 
 after_success:
