--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -25,6 +25,42 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.7</version>
+            </dependency>
+
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>1.1.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.1.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.typesafe.akka</groupId>
+                <artifactId>akka-actor</artifactId>
+                <version>2.5.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.typesafe.akka</groupId>
+                <artifactId>akka-remote</artifactId>
+                <version>2.5.3</version>
+            </dependency>
+            <dependency>
+                <groupId>com.typesafe.akka</groupId>
+                <artifactId>akka-remote</artifactId>
+                <version>2.5.3</version>
+            </dependency>
+            
             <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
             <dependency>
                 <groupId>com.typesafe</groupId>
@@ -137,7 +173,7 @@
                         <target>${java.version}</target>
                         <encoding>${project.build.sourceEncoding}</encoding>
                         <!--<includes>-->
-                            <!--<include>**/*.java</include>-->
+                        <!--<include>**/*.java</include>-->
                         <!--</includes>-->
                     </configuration>
                     <executions>
@@ -252,7 +288,7 @@
                     <configuration>
                         <recompileMode>incremental</recompileMode>
                         <!--<includes>-->
-                            <!--<include>**/*.scala</include>-->
+                        <!--<include>**/*.scala</include>-->
                         <!--</includes>-->
                         <args>
                             <arg>-unchecked</arg>
