--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -21,6 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <project.path>/Users/wallace/DevCode/privateCode/CodePrototypesDemo</project.path>
     </properties>
 
     <dependencyManagement>
@@ -48,6 +49,34 @@
                 <groupId>com.typesafe.scala-logging</groupId>
                 <artifactId>scala-logging_2.11</artifactId>
                 <version>3.1.0</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
+            <dependency>
+                <groupId>com.jcraft</groupId>
+                <artifactId>jsch</artifactId>
+                <version>0.1.54</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/net.minidev/json-smart -->
+            <dependency>
+                <groupId>net.minidev</groupId>
+                <artifactId>json-smart</artifactId>
+                <version>2.3</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.scala-lang.modules/scala-parser-combinators -->
+            <dependency>
+                <groupId>org.scala-lang.modules</groupId>
+                <artifactId>scala-parser-combinators_2.11</artifactId>
+                <version>1.1.0</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/com.github.pathikrit/better-files -->
+            <dependency>
+                <groupId>com.github.pathikrit</groupId>
+                <artifactId>better-files_2.11</artifactId>
+                <version>3.4.0</version>
             </dependency>
 
             <dependency>
@@ -134,10 +163,14 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.spark</groupId>
+                <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+                <version>2.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.spark</groupId>
                 <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>
                 <version>2.0.0</version>
             </dependency>
-
             <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive_2.11 -->
             <dependency>
                 <groupId>org.apache.spark</groupId>
@@ -159,14 +192,68 @@
                 <version>2.0.0</version>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
             <dependency>
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-clients</artifactId>
                 <version>0.8.2.1</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>0.10.0.1</version>
+            </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-compress</artifactId>
+                <version>1.15</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.parquet/parquet-hadoop -->
+            <dependency>
+                <groupId>org.apache.parquet</groupId>
+                <artifactId>parquet-hadoop</artifactId>
+                <version>1.8.1</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-hdfs -->
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-hdfs</artifactId>
+                <version>2.7.2</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common -->
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-common</artifactId>
+                <version>2.7.2</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.3</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpcore</artifactId>
+                <version>4.4.9</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.zte.hadoop.loader</groupId>
+                <artifactId>hadoop-loader</artifactId>
+                <version>7.4.1</version>
+                <scope>system</scope>
+                <systemPath>${project.path}/lib/loader.jar</systemPath>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -180,6 +267,29 @@
         <!--</resources>-->
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>3.0.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>1.3.1</version>
+                    <executions>
+                        <execution>
+                            <id>enforce</id>
+                            <configuration>
+                                <rules>
+                                    <DependencyConvergence/>
+                                </rules>
+                            </configuration>
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
 
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
@@ -197,7 +307,7 @@
                         <jvmArgs>
                             <jvmArg>-Xms1024m</jvmArg>
                             <jvmArg>-Xmx1024m</jvmArg>
-                            <jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
+                            <jvmArg>-XX:ReservedCodeCacheSize=128M</jvmArg>
                         </jvmArgs>
                         <javacArgs>
                             <javacArg>-source</javacArg>
@@ -264,7 +374,7 @@
                         <archive>
                             <manifest>
                                 <addClasspath>true</addClasspath>
-                                <classpathPrefix>./lib</classpathPrefix>
+                                <classpathPrefix>../lib/</classpathPrefix>
                                 <mainClass>com.hackerforfuture.codeprototypes.dataloader.DataLoader</mainClass>
                             </manifest>
                         </archive>
@@ -334,35 +444,34 @@
                 <!--</plugin>-->
 
 
-
                 <!--<plugin>-->
-                    <!--<groupId>org.apache.maven.plugins</groupId>-->
-                    <!--<artifactId>maven-assembly-plugin</artifactId>-->
-                    <!--<version>3.1.0</version>-->
-                    <!--<configuration>-->
-                        <!--<archive>-->
-                            <!--<manifest>-->
-                                <!--<mainClass>com.hackerforfuture.codeprototypes.dataloader.DataLoader</mainClass>-->
-                            <!--</manifest>-->
-                        <!--</archive>-->
-                        <!--<descriptorRefs>-->
-                            <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
-                        <!--</descriptorRefs>-->
-                    <!--</configuration>-->
-                    <!--<executions>-->
-                        <!--<execution>-->
-                            <!--<id>make-assembly</id>-->
-                            <!--<phase>package</phase>-->
-                            <!--<goals>-->
-                                <!--<goal>single</goal>-->
-                            <!--</goals>-->
-                        <!--</execution>-->
-                    <!--</executions>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-assembly-plugin</artifactId>-->
+                <!--<version>3.1.0</version>-->
+                <!--<configuration>-->
+                <!--<archive>-->
+                <!--<manifest>-->
+                <!--<mainClass>com.hackerforfuture.codeprototypes.dataloader.DataLoader</mainClass>-->
+                <!--</manifest>-->
+                <!--</archive>-->
+                <!--<descriptorRefs>-->
+                <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
+                <!--</descriptorRefs>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                <!--<execution>-->
+                <!--<id>make-assembly</id>-->
+                <!--<phase>package</phase>-->
+                <!--<goals>-->
+                <!--<goal>single</goal>-->
+                <!--</goals>-->
+                <!--</execution>-->
+                <!--</executions>-->
                 <!--</plugin>-->
             </plugins>
         </pluginManagement>
 
-        <outputDirectory>target/scala-${scala.binary.version}/classes</outputDirectory>
-        <testOutputDirectory>target/scala-${scala.binary.version}/test-classes</testOutputDirectory>
+        <outputDirectory>target/scala/classes</outputDirectory>
+        <testOutputDirectory>target/scala/test-classes</testOutputDirectory>
     </build>
 </project>
