--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,15 @@
                 <!--<systemPath>${project.path}/lib/loader.jar</systemPath>-->
                 <systemPath>${project.basedir}/lib/loader.jar</systemPath>
             </dependency>
+
+            <!-- required by scalatest-maven-plugin to generate HTML report -->
+            <dependency>
+                <groupId>org.pegdown</groupId>
+                <artifactId>pegdown</artifactId>
+                <version>1.4.2</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -285,198 +294,225 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
                     <version>1.3.1</version>
-                    <executions>
-                        <execution>
-                            <id>enforce</id>
-                            <configuration>
-                                <rules>
-                                    <DependencyConvergence/>
-                                </rules>
-                            </configuration>
-                            <goals>
-                                <goal>enforce</goal>
-                            </goals>
-                        </execution>
-                    </executions>
+                    <!--<executions>-->
+                    <!--<execution>-->
+                    <!--<id>enforce</id>-->
+                    <!--<configuration>-->
+                    <!--<rules>-->
+                    <!--<DependencyConvergence/>-->
+                    <!--</rules>-->
+                    <!--</configuration>-->
+                    <!--<goals>-->
+                    <!--<goal>enforce</goal>-->
+                    <!--</goals>-->
+                    <!--</execution>-->
+                    <!--</executions>-->
                 </plugin>
 
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
                     <version>3.2.2</version>
-                    <configuration>
-                        <recompileMode>incremental</recompileMode>
-                        <args>
-                            <arg>-unchecked</arg>
-                            <arg>-deprecation</arg>
-                            <arg>-feature</arg>
-                            <arg>-explaintypes</arg>
-                            <arg>-Yno-adapted-args</arg>
-                        </args>
-                        <jvmArgs>
-                            <jvmArg>-Xms1024m</jvmArg>
-                            <jvmArg>-Xmx1024m</jvmArg>
-                            <jvmArg>-XX:ReservedCodeCacheSize=128M</jvmArg>
-                        </jvmArgs>
-                        <javacArgs>
-                            <javacArg>-source</javacArg>
-                            <javacArg>${java.version}</javacArg>
-                            <javacArg>-target</javacArg>
-                            <javacArg>${java.version}</javacArg>
-                            <javacArg>-Xlint:all,-serial,-path,-try</javacArg>
-                        </javacArgs>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>compile-scala</id>
-                            <phase>compile</phase>
-                            <goals>
-                                <goal>add-source</goal>
-                                <goal>compile</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>test-compile-first</id>
-                            <phase>test-compile</phase>
-                            <goals>
-                                <goal>add-source</goal>
-                                <goal>testCompile</goal>
-                            </goals>
-                        </execution>
-                    </executions>
+                    <!--<configuration>-->
+                    <!--<recompileMode>incremental</recompileMode>-->
+                    <!--<args>-->
+                    <!--<arg>-unchecked</arg>-->
+                    <!--<arg>-deprecation</arg>-->
+                    <!--<arg>-feature</arg>-->
+                    <!--<arg>-explaintypes</arg>-->
+                    <!--<arg>-Yno-adapted-args</arg>-->
+                    <!--</args>-->
+                    <!--<jvmArgs>-->
+                    <!--<jvmArg>-Xms1024m</jvmArg>-->
+                    <!--<jvmArg>-Xmx1024m</jvmArg>-->
+                    <!--<jvmArg>-XX:ReservedCodeCacheSize=128M</jvmArg>-->
+                    <!--</jvmArgs>-->
+                    <!--<javacArgs>-->
+                    <!--<javacArg>-source</javacArg>-->
+                    <!--<javacArg>${java.version}</javacArg>-->
+                    <!--<javacArg>-target</javacArg>-->
+                    <!--<javacArg>${java.version}</javacArg>-->
+                    <!--<javacArg>-Xlint:all,-serial,-path,-try</javacArg>-->
+                    <!--</javacArgs>-->
+                    <!--</configuration>-->
+                    <!--<executions>-->
+                    <!--<execution>-->
+                    <!--<id>compile-scala</id>-->
+                    <!--<phase>compile</phase>-->
+                    <!--<goals>-->
+                    <!--<goal>add-source</goal>-->
+                    <!--<goal>compile</goal>-->
+                    <!--</goals>-->
+                    <!--</execution>-->
+                    <!--<execution>-->
+                    <!--<id>test-compile-first</id>-->
+                    <!--<phase>test-compile</phase>-->
+                    <!--<goals>-->
+                    <!--<goal>add-source</goal>-->
+                    <!--<goal>testCompile</goal>-->
+                    <!--</goals>-->
+                    <!--</execution>-->
+                    <!--</executions>-->
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.7.0</version>
-                    <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
-                        <encoding>${project.build.sourceEncoding}</encoding>
-                    </configuration>
+                    <!--<configuration>-->
+                    <!--<source>${java.version}</source>-->
+                    <!--<target>${java.version}</target>-->
+                    <!--<encoding>${project.build.sourceEncoding}</encoding>-->
+                    <!--</configuration>-->
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>3.0.2</version>
-                    <executions>
-                        <execution>
-                            <id>copy-dependencies</id>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>copy-dependencies</goal>
-                            </goals>
-                            <configuration>
-                                <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            </configuration>
-                        </execution>
-                    </executions>
+                    <!--<executions>-->
+                    <!--<execution>-->
+                    <!--<id>copy-dependencies</id>-->
+                    <!--<phase>package</phase>-->
+                    <!--<goals>-->
+                    <!--<goal>copy-dependencies</goal>-->
+                    <!--</goals>-->
+                    <!--<configuration>-->
+                    <!--<outputDirectory>${project.build.directory}/lib</outputDirectory>-->
+                    <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--</executions>-->
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.0.2</version>
+                    <!--<configuration>-->
+                    <!--<archive>-->
+                    <!--<manifest>-->
+                    <!--<addClasspath>true</addClasspath>-->
+                    <!--<classpathPrefix>../lib/</classpathPrefix>-->
+                    <!--<mainClass>com.hackerforfuture.codeprototypes.dataloader.DataLoader</mainClass>-->
+                    <!--</manifest>-->
+                    <!--</archive>-->
+                    <!--</configuration>-->
+                </plugin>
+
+                <!-- disable surefire -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.8.1</version>
                     <configuration>
-                        <archive>
-                            <manifest>
-                                <addClasspath>true</addClasspath>
-                                <classpathPrefix>../lib/</classpathPrefix>
-                                <mainClass>com.hackerforfuture.codeprototypes.dataloader.DataLoader</mainClass>
-                            </manifest>
-                        </archive>
+                        <skipTests>true</skipTests>
+                        <includes>
+                            <include>**/*Test*.*</include>
+                            <include>**/*Suite*.*</include>
+                            <include>**/*UnitSpec*.*</include>
+                        </includes>
                     </configuration>
                 </plugin>
 
-                <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-antrun-plugin</artifactId>-->
-                <!--<version>1.7</version>-->
-                <!--<executions>-->
-                <!--<execution>-->
-                <!--<phase>package</phase>-->
-                <!--<goals>-->
-                <!--<goal>run</goal>-->
-                <!--</goals>-->
-                <!--<configuration>-->
-                <!--<target name="copy">-->
-                <!--<delete>-->
-                <!--<fileset dir="target" includes="*.properties"/>-->
-                <!--</delete>-->
-                <!--<copy todir="target">-->
-                <!--<fileset dir="files"/>-->
-                <!--</copy>-->
-                <!--</target>-->
-                <!--</configuration>-->
-                <!--</execution>-->
-                <!--</executions>-->
-                <!--</plugin>-->
+                <plugin>
+                    <groupId>org.scalatest</groupId>
+                    <artifactId>scalatest-maven-plugin</artifactId>
+                    <version>1.0</version>
+                </plugin>
 
-                <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-shade-plugin</artifactId>-->
-                <!--<version>3.1.0</version>-->
-                <!--<executions>-->
-                <!--<execution>-->
-                <!--<phase>package</phase>-->
-                <!--<goals>-->
-                <!--<goal>shade</goal>-->
-                <!--</goals>-->
-                <!--<configuration>-->
-                <!--<transformers>-->
-                <!--<transformer-->
-                <!--implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-                <!--<manifestEntries>-->
-                <!--<Main-Class>com.hackerforfuture.codeprototypes.dataloader.DataLoader-->
-                <!--</Main-Class>-->
-                <!--<X-Compile-Source-JDK>${maven.compiler.source}</X-Compile-Source-JDK>-->
-                <!--<X-Compile-Target-JDK>${maven.compiler.target}</X-Compile-Target-JDK>-->
-                <!--</manifestEntries>-->
-                <!--</transformer>-->
-                <!--</transformers>-->
-                <!--</configuration>-->
-                <!--</execution>-->
-                <!--</executions>-->
-                <!--</plugin>-->
+                <plugin>
+                    <groupId>org.scoverage</groupId>
+                    <artifactId>scoverage-maven-plugin</artifactId>
+                    <version>1.3.0</version>
+                </plugin>
 
-                <!--<plugin>-->
-                <!--<groupId>org.apache.tomcat.maven</groupId>-->
-                <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-                <!--<version>2.2</version>-->
-                <!--<configuration>-->
-                <!--<url>localhost:8080/testing</url>-->
-                <!--<username>test</username>-->
-                <!--<password>test</password>-->
-                <!--</configuration>-->
-                <!--</plugin>-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.7</version>
+                    <!--<executions>-->
+                    <!--<execution>-->
+                    <!--<phase>package</phase>-->
+                    <!--<goals>-->
+                    <!--<goal>run</goal>-->
+                    <!--</goals>-->
+                    <!--<configuration>-->
+                    <!--<target name="copy">-->
+                    <!--<delete>-->
+                    <!--<fileset dir="target" includes="*.properties"/>-->
+                    <!--</delete>-->
+                    <!--<copy todir="target">-->
+                    <!--<fileset dir="files"/>-->
+                    <!--</copy>-->
+                    <!--</target>-->
+                    <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--</executions>-->
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <!--<executions>-->
+                    <!--<execution>-->
+                    <!--<phase>package</phase>-->
+                    <!--<goals>-->
+                    <!--<goal>shade</goal>-->
+                    <!--</goals>-->
+                    <!--<configuration>-->
+                    <!--<transformers>-->
+                    <!--<transformer-->
+                    <!--implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+                    <!--<manifestEntries>-->
+                    <!--<Main-Class>com.hackerforfuture.codeprototypes.dataloader.DataLoader-->
+                    <!--</Main-Class>-->
+                    <!--<X-Compile-Source-JDK>${maven.compiler.source}</X-Compile-Source-JDK>-->
+                    <!--<X-Compile-Target-JDK>${maven.compiler.target}</X-Compile-Target-JDK>-->
+                    <!--</manifestEntries>-->
+                    <!--</transformer>-->
+                    <!--</transformers>-->
+                    <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--</executions>-->
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>2.2</version>
+                    <!--<configuration>-->
+                    <!--<url>localhost:8080/testing</url>-->
+                    <!--<username>test</username>-->
+                    <!--<password>test</password>-->
+                    <!--</configuration>-->
+                </plugin>
 
 
-                <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-assembly-plugin</artifactId>-->
-                <!--<version>3.1.0</version>-->
-                <!--<configuration>-->
-                <!--<archive>-->
-                <!--<manifest>-->
-                <!--<mainClass>com.hackerforfuture.codeprototypes.dataloader.DataLoader</mainClass>-->
-                <!--</manifest>-->
-                <!--</archive>-->
-                <!--<descriptorRefs>-->
-                <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
-                <!--</descriptorRefs>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                <!--<execution>-->
-                <!--<id>make-assembly</id>-->
-                <!--<phase>package</phase>-->
-                <!--<goals>-->
-                <!--<goal>single</goal>-->
-                <!--</goals>-->
-                <!--</execution>-->
-                <!--</executions>-->
-                <!--</plugin>-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <!--<configuration>-->
+                    <!--<archive>-->
+                    <!--<manifest>-->
+                    <!--<mainClass>com.hackerforfuture.codeprototypes.dataloader.DataLoader</mainClass>-->
+                    <!--</manifest>-->
+                    <!--</archive>-->
+                    <!--<descriptorRefs>-->
+                    <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
+                    <!--</descriptorRefs>-->
+                    <!--</configuration>-->
+                    <!--<executions>-->
+                    <!--<execution>-->
+                    <!--<id>make-assembly</id>-->
+                    <!--<phase>package</phase>-->
+                    <!--<goals>-->
+                    <!--<goal>single</goal>-->
+                    <!--</goals>-->
+                    <!--</execution>-->
+                    <!--</executions>-->
+                </plugin>
             </plugins>
         </pluginManagement>
 
